Bug 924059.  Give ArrayIterator and its prototype different JSClasses so we can't confuse them for each other.  r=waldo